<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/place_holder_1"
        android:enabled="true"
        android:title=""
        app:showAsAction="always" />

    <item
        android:id="@+id/action_logout"
        android:enabled="true"
        android:icon="@drawable/logout"
        android:title="Log out"
        android:layout_gravity="center"
        app:showAsAction="always" />

    <item
        android:id="@+id/place_holder_2"
        android:enabled="true"
        android:title=""
        app:showAsAction="always" />

</menu>