...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.34" />


        <Button
            android:id="@+id/open_map_btn"
            style="@style/AppTheme.FilledButton"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:scaleType="fitCenter"
            android:text="MAP"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="@+id/dashboard_to_BioTest"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/dashboard_to_BioTest"
            app:layout_constraintTop_toBottomOf="@+id/dashboard_to_BioTest" />
    </androidx.constraintlayout.widget.ConstraintLayout>
...
